--- a/style.css
+++ b/style.css
@@ -19,13 +19,13 @@ h2 {
 
 
 
-#increment-btn {
+#increament-btn {
 
-    background-color: darkred;
+    background-color: crimson;
     border: none;
     padding-top: 10px;
     padding-bottom: 10px;
-    color: white;
+    color: black;
     font-weight: bold;
     width: 200px;
     margin-bottom: 5px;
